samples/_failures_safe/1761666415_b9a004_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5e2cb1d7.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_5e2cb1d7.c:177:25: error: missing terminating " character
  177 |         default: return "UN
      |                         ^~~
./samples/SAFE/__tmp_5e2cb1d7.c:177:9: error: expected expression at end of input
  177 |         default: return "UN
      |         ^~~~~~~
./samples/SAFE/__tmp_5e2cb1d7.c:177:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5e2cb1d7.c:177:9: error: expected declaration or statement at end of input
